fix gap at top of nav bar

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 header{
     background-color:#CBDFBD;
     position:fixed;
+    top:0px;
     width:100%;
     margin:0;
     padding:0;
